--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
+    "name": "pure-suggest-demo",
+    "description": "Demo for pure-suggest plugin",
     "require": {
+        "php": "7.2.8",
         "vlucas/phpdotenv": "^2.5"
     }
 }
