--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Demo for pure-suggest plugin",
     "require": {
         "php": "7.2.8",
-        "vlucas/phpdotenv": "^2.5"
+        "vlucas/phpdotenv": "^2.5",
+        "ext-mbstring": "*"
     }
 }
