--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "module": "es6",
         "target": "es5",
         "jsx": "react",
-        "allowJs": true
+        "allowJs": true,
+        "experimentalDecorators": true
     }
 }
