--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/core-js": "^2.5.0",
     "clean-webpack-plugin": "^0.1.19",
+    "compression-webpack-plugin": "^1.0.1",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
