--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/core-js": "^2.5.0",
+    "autoprefixer": "^9.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
+    "postcss-loader": "^2.1.6",
     "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "typescript": "^2.9.2",
