--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "watch": "./node_modules/.bin/webpack --watch --mode=development",
     "build": "./node_modules/.bin/webpack --mode=production",
+    "test": "./node_modules/.bin/karma start",
     "postinstall": "npm run build"
   },
   "keywords": [
@@ -19,11 +20,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/core-js": "^2.5.0",
+    "@types/jasmine": "^2.8.8",
+    "@types/node": "^10.5.5",
     "autoprefixer": "^9.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.5",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-webpack": "^3.0.0",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "postcss-loader": "^2.1.6",
