--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,14 @@
 {
     "compilerOptions": {
-        "lib": ["es5", "es2017", "dom"],
+        "lib": [
+            "es5",
+            "es2017",
+            "dom"
+        ],
+        "types": [
+            "jasmine",
+            "node"
+        ],
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
